# videoripper

./: pyproject.toml
anime_rip/: __init__.py  animefreak.py  animefreak_shitway.py  base.py  cli.py
